update name controller registration and AppAuthenticator

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -19,7 +19,7 @@ security:
             provider: app_user_provider
             custom_authenticator: App\Security\AppUserAuthenticator
             logout:
-                path: app_logout
+                path: app_logout_user
                 # where to redirect after logout
                 # target: app_any_route
 
