--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,4 +1,8 @@
 security:
+    encoders:
+        App\Entity\Recruteur:
+            algorithm: bcrypt
+
     enable_authenticator_manager: true
     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
@@ -10,16 +14,36 @@ security:
             entity:
                 class: App\Entity\User
                 property: email
+        # used to reload user from session & other features (e.g. switch_user)
+
+        app_recruteur_provider:
+            entity:
+                class: App\Entity\Recruteur
+                property: email
+        # used to reload user from session & other features (e.g. switch_user)
+        # used to reload user from session & other features (e.g. switch_user)
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
-        main:
+        # main:
+        #     lazy: true
+        #     provider: app_user_provider
+        #     custom_authenticator: App\Security\AppUserAuthenticator
+        #     logout:
+        #         path: app_logout_user
+        recruteur:
             lazy: true
-            provider: app_user_provider
-            custom_authenticator: App\Security\AppUserAuthenticator
+            provider: app_recruteur_provider
+            form_login: 
+                login_path: app_loginRecruteur
+                check_path: app_loginRecruteur
             logout:
-                path: app_logout_user
+                path: app_logoutRecruteur
+      
+
+        
+        #         target: app_home
                 # where to redirect after logout
                 # target: app_any_route
 
