enregistrement user et recruteur controller à jour

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -14,6 +14,12 @@ security:
             entity:
                 class: App\Entity\User
                 property: email
+        
+        app_recruteur_provider:
+            entity:
+                class: App\Entity\Recruteur
+                property: email
+        # used to reload user from session & other features (e.g. switch_user)
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
@@ -21,13 +27,20 @@ security:
         main:
             lazy: true
             provider: app_user_provider
-            form_login:
-                login_path: app_connexion_user
-                check_path: app_connexion_user
-
             logout: 
-                path: app_deconnexion_user
+                path: app_deconnexion
                 target: app_home
+        
+        # recruteur:
+        #     lazy: true
+        #     provider: app_recruteur_provider
+        #     # form_login:
+        #     #     login_path: app_connexion_recruteur
+        #     #     check_path: app_connexion_recruteur
+            
+        #     logout: 
+        #         path: app_deconnexion_recruteur
+        #         target: app_home
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
 
