--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -52,6 +52,8 @@ security:
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
+        # - { path: ^/, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+       
 
 when@test:
     security:
