nouveau commit pour sauvegarde

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 /public/bundles/
 /var/
 /vendor/
-/public/fontawesome/
+/public/fontawesome-6/
 ###< symfony/framework-bundle ###
 
 ###> phpunit/phpunit ###
